--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "expense-tracker",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://Asatbek1.github.io/hm-17",
+  "homepage": "https://Asatbek1.github.io/homework17",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
